--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "firebase": "^8.4.1",
     "grommet": "^2.17.1",
     "grommet-icons": "^4.5.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.33.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
